--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -660,17 +660,15 @@ functions:
           npm run --unsafe-perm --workspace compass-e2e-tests test-packaged-ci
 
   get-compass-mongodb-com:
-    - command: git.get_project
-      type: system
-      params:
-        directory: compass-mongodb-com
     - command: shell.exec
       type: setup
       params:
-        working_dir: compass-mongodb-com
+        working_dir: src
         shell: bash
         script: |
           set -e
+          git clone https://github.com/10gen/compass-mongodb-com.git ../compass-mongodb-com
+          cd ../compass-mongodb-com
           echo "Using node version:";
           node -v;
           echo "Using npm version:";
