chore(ci): retry the scp and ssh commands in create-sbom.sh (#6630)
* retry the scp and ssh commands

* rather retry the whole create-sbom.sh script

* sans accidental commit

--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -443,7 +443,7 @@ functions:
         script: |
           set -e
 
-          .evergreen/create-sbom.sh
+          bash ".evergreen/retry-with-backoff.sh" .evergreen/create-sbom.sh
     - command: shell.exec
       params:
         working_dir: src
