--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -678,17 +678,17 @@ functions:
           # Load environment variables
           eval $(.evergreen/print-compass-env.sh)
 
-          #if [[ "$IS_WINDOWS" == "true" ]]; then
+          if [[ "$IS_WINDOWS" == "true" ]]; then
             # TODO: windows_setup
             # TODO: windows_msi
-            # TODO: windows_zip
-          #fi
+            npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_zip
+          fi
 
           if [[ "$IS_OSX" == "true" ]]; then
             echo "Disabling clipboard usage in e2e tests (TODO: https://jira.mongodb.org/browse/BUILD-14780)"
             export COMPASS_E2E_DISABLE_CLIPBOARD_USAGE="true"
             npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=osx_dmg
-            # TODO: osx_zip
+            npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=osx_zip
           fi
 
           #if [[ "$IS_UBUNTU" == "true" ]]; then
