Add Windows variant

--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -67,13 +67,12 @@ const SMOKETEST_BUILD_VARIANTS = [
 //    run_on: 'ubuntu2004-large',
 //    depends_on: 'package-ubuntu',
 //  },
-  
-//  {
-//    name: 'smoketest-windows',
-//    display_name: 'Smoketest Windows',
-//    run_on: 'windows-vsCurrent-large',
-//    depends_on: 'package-windows',
-//  },
+  {
+    name: 'smoketest-windows',
+    display_name: 'Smoketest Windows',
+    run_on: 'windows-vsCurrent-large',
+    depends_on: 'package-windows',
+  },
 //  {
 //    name: 'smoketest-rhel',
 //    display_name: 'Smoketest RHEL',
