--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -76,6 +76,14 @@ buildvariants:
       - name: package-compass
       - name: package-compass-isolated
       - name: package-compass-readonly
+  - name: smoketest-windows-compass
+    display_name: Smoketest Windows (compass)
+    run_on: windows-vsCurrent-large
+    depends_on:
+      - name: package-compass
+        variant: package-windows
+    tasks:
+      - name: smoketest-compass
   - name: smoketest-macos-x64-compass
     display_name: Smoketest MacOS Intel (compass)
     run_on: macos-14-gui
