--- a/package.json
+++ b/package.json
@@ -91,6 +91,15 @@
     "@types/react": "^17.0.83",
     "@types/react-dom": "^17.0.25",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "webdriverio": {
+      "puppeteer-core": "^23.10.3"
+    },
+    "enzyme": {
+      "cheerio": "1.0.0-rc.10"
+    },
+    "chai-enzyme": {
+      "cheerio": "1.0.0-rc.10"
+    }
   }
 }
