--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -193,17 +193,8 @@ functions:
           npm config ls -l
           echo "(if npm fails, debug.log will be uploaded to S3)"
 
-          # Install dependencies
+          # Install and check dependencies
           bash ".evergreen/retry-with-backoff.sh" .evergreen/npm_ci.sh
-
-          # Will fail if versions of direct dependencies listed in package-lock
-          # are not matching versions defined in package.json file of any of the
-          # workspace packages
-          # This command is very noisy when running from root with --all, store
-          # the output in a file that will be uploaded with rest of the logs
-          LS_ALL_STDOUT_FILE="$(npm config get cache)/_logs/$(date -u +"%Y-%m-%dT%H_%M_%SZ")-npm-ls-all.log"
-          echo "Validating dependencies with \`npm ls --all\`..."
-          (npm ls --all > $LS_ALL_STDOUT_FILE && echo "No mismatched dependency versions") || (echo "\nThe \`npm ls\` command failed with mismatched dependencies error. This usually means that the dependency versions listed in package.json are not matching dependencies resolved and recorded in package-lock.json. If you updated package.json files in your PR, inspect the error output and try to re-install offending dependncies to fix the package-lock file." && exit 1)
 
   bootstrap:
     - command: shell.exec
