--- a/packages/compass-schema/package.json
+++ b/packages/compass-schema/package.json
@@ -97,8 +97,9 @@
     "react": "^17.0.2",
     "react-leaflet": "^2.4.0",
     "react-leaflet-draw": "^0.19.0",
-    "reflux": "^0.4.1",
-    "@mongodb-js/reflux-state-mixin": "^1.1.5"
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "is_compass_plugin": true
 }
