--- a/.github/workflows/merge-bump-packages-pr.yaml
+++ b/.github/workflows/merge-bump-packages-pr.yaml
@@ -5,6 +5,9 @@ on:
     # Each Tuesday at 5 AM UTC
     - cron: "0 5 * * 2"
 
+permissions:
+  contents: none # We use the github app token to merge the PR
+
 jobs:
   merge_bump_packages_pr:
     name: Merge bump packages PR
