--- a/.github/workflows/release-notes-labels.yaml
+++ b/.github/workflows/release-notes-labels.yaml
@@ -10,6 +10,10 @@ name: Release Notes - Labels
 on:
   pull_request:
     types: [opened, edited, labeled, unlabeled, synchronize]
+
+permissions:
+  pull-requests: write # to add and remove labels
+
 jobs:
   label:
     runs-on: ubuntu-latest
@@ -20,41 +24,45 @@ jobs:
         if: |
           startsWith(github.event.pull_request.title, 'fix:') ||
           startsWith(github.event.pull_request.title, 'fix(')
-        uses: actions-ecosystem/action-remove-labels@v1
+        uses: actions-ecosystem/action-remove-labels@2ce5d41b4b6aa8503e285553f75ed56e0a40bae0 # 1.3.0
         with:
           labels: feat
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: remove label not matching title - feat
         if: |
           startsWith(github.event.pull_request.title, 'feat:') ||
           startsWith(github.event.pull_request.title, 'feat(')
-        uses: actions-ecosystem/action-remove-labels@v1
+        uses: actions-ecosystem/action-remove-labels@2ce5d41b4b6aa8503e285553f75ed56e0a40bae0 # 1.3.0
         with:
           labels: fix
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: add label based on title - fix
         if: |
           startsWith(github.event.pull_request.title, 'fix:') ||
           startsWith(github.event.pull_request.title, 'fix(')
-        uses: actions-ecosystem/action-add-labels@v1
+        uses: actions-ecosystem/action-add-labels@bd52874380e3909a1ac983768df6976535ece7f8 # 1.1.0
         with:
           labels: fix
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: add label based on title - feat
         if: |
           startsWith(github.event.pull_request.title, 'feat:') ||
           startsWith(github.event.pull_request.title, 'feat(')
-        uses: actions-ecosystem/action-add-labels@v1
+        uses: actions-ecosystem/action-add-labels@bd52874380e3909a1ac983768df6976535ece7f8 # 1.1.0
         with:
           labels: feat
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: mheap/github-action-required-labels@v1
+      - uses: mheap/github-action-required-labels@388fd6af37b34cdfe5a23b37060e763217e58b03 # 5.5.0
         with:
           mode: maximum
           count: 0
           labels: "wip, work in progress, work-in-progress"
 
-      - uses: mheap/github-action-required-labels@v1
+      - uses: mheap/github-action-required-labels@388fd6af37b34cdfe5a23b37060e763217e58b03 # 5.5.0
         if: |
           startsWith(github.event.pull_request.title, 'fix:') ||
           startsWith(github.event.pull_request.title, 'fix(') ||
