--- a/.github/workflows/start-ga.yaml
+++ b/.github/workflows/start-ga.yaml
@@ -14,6 +14,9 @@ on:
         default: "beta-releases"
         required: false
 
+permissions:
+  contents: write # To create the new branch and push it
+
 jobs:
   startRelease:
     name: Start new GA release
