--- a/.github/workflows/start-beta.yml
+++ b/.github/workflows/start-beta.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Start Release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           node scripts/release.js beta \
             --merge-branch="${{ github.event.inputs.mergeBranch || 'main' }}" \
