--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -469,7 +469,7 @@ tasks:
       - func: bootstrap
         vars:
           scope: 'compass-e2e-tests'
-      - func: get-compass-mongodb-com
+      - func: get-update-server
       - func: smoketest-packaged-app
         vars:
           mongodb_version: latest-enterprise
