--- a/packages/databases-collections-list/package.json
+++ b/packages/databases-collections-list/package.json
@@ -54,6 +54,8 @@
     "@mongodb-js/compass-workspaces": "^0.30.5",
     "@mongodb-js/connection-info": "^0.10.5",
     "compass-preferences-model": "^2.32.5",
+    "mongodb-collection-model": "^5.24.5",
+    "mongodb-database-model": "^2.24.5",
     "mongodb-ns": "^2.4.2",
     "react": "^17.0.2"
   },
