--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -678,7 +678,7 @@ functions:
           g++ --version;
           npm ci --engine-strict=false
           npm link --engine-strict=false
-          cd ../compass
+          cd ../src
           npm link compass-mongodb-com --engine-strict=false
 
   smoketest-packaged-app:
