feat(databases-collections): handle non-existent namespaces COMPASS-5750 (#6664)
* setup data for the feature

* update sidebar

* update database-collection

* correct icon

* update workspace tabs

* rename property

* fetch collstats only if db exists

* clean up

* checks and lint

* fix log id and message

* tests

* correcct comment

* correct color on grid

* rename prop

* also handle non-existent collections

* fix check

* react to changes

* do mix with adapt ns info

* border on hover

* use spacing nums

* text change

* install

--- a/packages/databases-collections-list/package.json
+++ b/packages/databases-collections-list/package.json
@@ -54,6 +54,8 @@
     "@mongodb-js/compass-workspaces": "^0.31.0",
     "@mongodb-js/connection-info": "^0.11.0",
     "compass-preferences-model": "^2.33.0",
+    "mongodb-collection-model": "^5.25.0",
+    "mongodb-database-model": "^2.25.0",
     "mongodb-ns": "^2.4.2",
     "react": "^17.0.2"
   },
