--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -313,6 +313,7 @@ tasks:
       - func: test
         vars:
           debug: hadron*,mongo*
+          mongodb_version: 8.0.x-enterprise
   - name: test-electron
     tags:
       - required-for-publish
@@ -324,6 +325,7 @@ tasks:
       - func: test-electron
         vars:
           debug: hadron*,mongo*
+          mongodb_version: 8.0.x-enterprise
   - name: test-connectivity
     tags:
       - required-for-publish
@@ -333,6 +335,7 @@ tasks:
       - func: test-connectivity
         vars:
           debug: compass*,electron*,hadron*,mongo*
+          mongodb_version: 8.0.x-enterprise
   - name: test-csfle
     tags:
       - required-for-publish
@@ -344,6 +347,7 @@ tasks:
       - func: test-csfle
         vars:
           debug: compass*,electron*,hadron*,mongo*
+          mongodb_version: 8.0.x-enterprise
   - name: e2e-coverage-1
     tags:
       - required-for-publish
@@ -357,6 +361,7 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 1
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
+          mongodb_version: 8.0.x-enterprise
   - name: e2e-coverage-2
     tags:
       - required-for-publish
@@ -370,6 +375,7 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 2
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
+          mongodb_version: 8.0.x-enterprise
   - name: e2e-coverage-3
     tags:
       - required-for-publish
@@ -383,6 +389,7 @@ tasks:
           e2e_test_groups: 3
           e2e_test_group: 3
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
+          mongodb_version: 8.0.x-enterprise
   - name: generate-vulnerability-report
     tags:
       - required-for-publish
@@ -497,7 +504,7 @@ tasks:
           scope: compass-e2e-tests
       - func: smoketest-packaged-app
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           compass_distribution: compass
           debug: compass-e2e-tests*,electron*,hadron*,mongo*
   - name: test-server-40x-community-1
@@ -1555,7 +1562,7 @@ tasks:
           compass_distribution: compass
       - func: test-packaged-app
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           compass_distribution: compass
           e2e_test_groups: 3
           e2e_test_group: 1
@@ -1580,7 +1587,7 @@ tasks:
           compass_distribution: compass
       - func: test-packaged-app
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           compass_distribution: compass
           e2e_test_groups: 3
           e2e_test_group: 2
@@ -1605,7 +1612,7 @@ tasks:
           compass_distribution: compass
       - func: test-packaged-app
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           compass_distribution: compass
           e2e_test_groups: 3
           e2e_test_group: 3
@@ -1627,7 +1634,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           browser_name: chrome
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1650,7 +1657,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           browser_name: chrome
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1673,7 +1680,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           browser_name: chrome
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1696,7 +1703,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           browser_name: firefox
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1719,7 +1726,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           browser_name: firefox
           compass_distribution: compass
           e2e_test_groups: 3
@@ -1742,7 +1749,7 @@ tasks:
           compass_distribution: compass
       - func: test-web-sandbox
         vars:
-          mongodb_version: latest-enterprise
+          mongodb_version: 8.0.x-enterprise
           browser_name: firefox
           compass_distribution: compass
           e2e_test_groups: 3
