--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -191,6 +191,7 @@
   "devDependencies": {
     "@electron/rebuild": "^3.7.1",
     "@electron/remote": "^2.1.2",
+    "@types/minimatch": "^5.1.2",
     "@mongodb-js/atlas-service": "^0.35.0",
     "@mongodb-js/compass-aggregations": "^9.52.0",
     "@mongodb-js/compass-app-stores": "^7.36.0",
@@ -256,9 +257,9 @@
     "hadron-build": "^25.7.0",
     "hadron-ipc": "^3.4.0",
     "local-links": "^1.4.0",
-    "lodash": "^4.17.21",
     "make-fetch-happen": "^10.2.1",
     "marky": "^1.2.1",
+    "minimatch": "^10.0.1",
     "mongodb": "^6.12.0",
     "mongodb-build-info": "^1.7.2",
     "mongodb-cloud-info": "^2.1.2",
