--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -692,15 +692,15 @@ functions:
             npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=osx_dmg --tests=time-to-first-query
           fi
 
-          #if [[ "$IS_UBUNTU" == "true" ]]; then
+          if [[ "$IS_UBUNTU" == "true" ]]; then
             # TODO: linux_deb
-            # TODO: linux_tar
-          #fi
+            npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=linux_tar --tests=time-to-first-query
+          fi
 
-          #if [[ "$IS_RHEL" == "true" ]]; then
+          if [[ "$IS_RHEL" == "true" ]]; then
             # TODO: linux_rpm
-            # TODO: rhel_tar
-          #fi
+            npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=linux_tar --tests=time-to-first-query
+          fi
 
   test-web-sandbox:
     - command: shell.exec
