--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -678,8 +678,14 @@ functions:
 
           if [[ "$IS_WINDOWS" == "true" ]]; then
             npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_setup --tests time-to-first-query
-            npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_zip --tests auto-update-from
-            npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_msi --tests auto-update-from
+            if [[ "$HADRON_DISTRIBUTION" == "compass-isolated"]]; then
+              # auto-update is not supported on isolated
+              npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_zip --tests time-to-first-query
+              npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_msi --tests time-to-first-query
+            else
+              npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_zip --tests auto-update-from
+              npm run --unsafe-perm --workspace @mongodb-js/compass-smoke-tests start -- --package=windows_msi --tests auto-update-from
+            fi
           fi
 
           if [[ "$IS_OSX" == "true" ]]; then
