Add linux_rpm and arm CI with the RHEL build variant

--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -73,12 +73,12 @@ const SMOKETEST_BUILD_VARIANTS = [
     run_on: 'windows-vsCurrent-large',
     depends_on: 'package-windows',
   },
-//  {
-//    name: 'smoketest-rhel',
-//    display_name: 'Smoketest RHEL',
-//    run_on: 'rhel80-large',
-//    depends_on: 'package-rhel',
-//  },
+  {
+    name: 'smoketest-rhel',
+    display_name: 'Smoketest RHEL',
+    run_on: 'rhel80-large',
+    depends_on: 'package-rhel',
+  },
   {
     name: 'smoketest-macos-x64',
     display_name: 'Smoketest MacOS Intel',
