add electron-windows-installer debug

--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -460,7 +460,7 @@ tasks:
       - func: spawn-signing-server
       - func: package
         vars:
-          debug: 'hadron*,mongo*,compass*,electron*,sign*'
+          debug: 'hadron*,mongo*,compass*,electron*,sign*,electron-windows-installer:main'
           compass_distribution: <%= distribution %>
       - func: verify-artifacts
       - func: save-all-artifacts
