--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -448,7 +448,8 @@ tasks:
       - func: spawn-signing-server
       - func: package
         vars:
-          debug: hadron*,mongo*,compass*,electron*,sign*
+          debug: >-
+            hadron*,mongo*,compass*,electron*,sign*,electron-windows-installer:main
           compass_distribution: compass
       - func: verify-artifacts
       - func: save-all-artifacts
@@ -471,7 +472,8 @@ tasks:
       - func: spawn-signing-server
       - func: package
         vars:
-          debug: hadron*,mongo*,compass*,electron*,sign*
+          debug: >-
+            hadron*,mongo*,compass*,electron*,sign*,electron-windows-installer:main
           compass_distribution: compass-isolated
       - func: verify-artifacts
       - func: save-all-artifacts
@@ -494,7 +496,8 @@ tasks:
       - func: spawn-signing-server
       - func: package
         vars:
-          debug: hadron*,mongo*,compass*,electron*,sign*
+          debug: >-
+            hadron*,mongo*,compass*,electron*,sign*,electron-windows-installer:main
           compass_distribution: compass-readonly
       - func: verify-artifacts
       - func: save-all-artifacts
