--- a/.evergreen/buildvariants-and-tasks.yml
+++ b/.evergreen/buildvariants-and-tasks.yml
@@ -448,8 +448,7 @@ tasks:
       - func: spawn-signing-server
       - func: package
         vars:
-          debug: >-
-            hadron*,mongo*,compass*,electron*,sign*,electron-windows-installer:main
+          debug: hadron*,mongo*,compass*,electron*,sign*
           compass_distribution: compass
       - func: verify-artifacts
       - func: save-all-artifacts
@@ -472,8 +471,7 @@ tasks:
       - func: spawn-signing-server
       - func: package
         vars:
-          debug: >-
-            hadron*,mongo*,compass*,electron*,sign*,electron-windows-installer:main
+          debug: hadron*,mongo*,compass*,electron*,sign*
           compass_distribution: compass-isolated
       - func: verify-artifacts
       - func: save-all-artifacts
@@ -496,8 +494,7 @@ tasks:
       - func: spawn-signing-server
       - func: package
         vars:
-          debug: >-
-            hadron*,mongo*,compass*,electron*,sign*,electron-windows-installer:main
+          debug: hadron*,mongo*,compass*,electron*,sign*
           compass_distribution: compass-readonly
       - func: verify-artifacts
       - func: save-all-artifacts
