Add e2e tests as dep of smoke-tests

--- a/packages/compass-smoke-tests/.depcheckrc
+++ b/packages/compass-smoke-tests/.depcheckrc
@@ -2,3 +2,5 @@ ignores:
  - '@mongodb-js/prettier-config-compass'
  - '@mongodb-js/tsconfig-compass'
  - compass-mongodb-com
+ # Calling into the e2e tests via child processes
+ - compass-e2e-tests
